--- a/src/app/admin-academica/admin-academica.component.html
+++ b/src/app/admin-academica/admin-academica.component.html
@@ -67,7 +67,7 @@
             <table mat-table [dataSource]="dataSource2" matSort class="mat-elevation-z8">
 
 
-
+ 
                 <ng-container matColumnDef="Detalle del evento">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> descripción</th>
                     <td mat-cell *matCellDef="let student"> {{ student.descripcion }} </td>
@@ -167,7 +167,10 @@
             <table mat-table [dataSource]="dataSource3" matSort class="mat-elevation-z8">
 
 
-
+  <ng-container matColumnDef="Titulo">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Titulo</th>
+                    <td mat-cell *matCellDef="let student"> {{ student.titulo }} </td>
+                </ng-container>
                 <ng-container matColumnDef="Detalle del evento">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> descripción</th>
                     <td mat-cell *matCellDef="let student"> {{ student.detalle }} </td>
@@ -212,10 +215,12 @@
                 <h6 mat-dialog-title style="font-size: 1.2rem; margin-bottom: 1.5rem;">
                     Crear evento
                 </h6>
-
                 <mat-dialog-content [formGroup]="eventosForm"
                     style="display: flex; flex-direction: column; gap: 1.2rem;">
-
+                    <mat-form-field appearance="outline" style="width: 100%;">
+                        <mat-label>Titulo</mat-label>
+                        <input matInput formControlName="titulo" required />
+                    </mat-form-field>
                     <!-- Descripción -->
                     <mat-form-field appearance="outline" style="width: 100%;">
                         <mat-label>Descripción</mat-label>
