--- a/src/app/administracion/modales/dir_grado/modal-asignar-grado/modal-asignar-grado.component.html
+++ b/src/app/administracion/modales/dir_grado/modal-asignar-grado/modal-asignar-grado.component.html
@@ -18,7 +18,7 @@
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
           <ng-container matColumnDef="Grado">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Grado </th>
-            <td mat-cell *matCellDef="let profesor"> {{ profesor.tipo_grado-1 }} </td>
+            <td mat-cell *matCellDef="let profesor"> {{ profesor.tipo_grado }} </td>
           </ng-container>
           <ng-container matColumnDef="Curso">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Detalle </th>
