--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -81,13 +81,14 @@
   }
 .nav-button:first-of-type { left: 0; }
   .nav-button:last-of-type { right: 0; }
-  @media (max-width: 600px) {
   .banner-slide {
-    height: 200px;
+  height: 75vh;
+}
+  @media (max-width: 600px) {
+ .banner-slider {
+    max-height: 3%; /* más bajo en tablets y móviles */
   }
-  .banner-slider img{
-    height: 100px;
-  }
+
   .banner-slider button {
     width: 30px;
     height: 30px;
@@ -145,7 +146,8 @@
   >
     <div *ngFor="let banner of bannerImages" 
          class="banner-slide"
-         style="min-width: 100%; height: 75vh; flex-shrink: 0; position: relative;">
+         style="min-width: 100%;  flex-shrink: 0; position: relative;">
+
       <img [src]="banner.image" 
            alt="banner" 
            style="width: 100%; height: 100%; object-fit: cover;">
