talleres docente nota

--- a/src/app/detalle-taller-component/detalle-taller-component.component.html
+++ b/src/app/detalle-taller-component/detalle-taller-component.component.html
@@ -43,7 +43,7 @@
         <i class="bi bi-send-check me-1"></i> Enviar respuesta
       </button>
 <h4>
-  <span *ngIf="pendiente.length > 0" class="badge text-bg-warning">
+  <span *ngIf="pendiente" class="badge text-bg-warning">
     Atención: ya se envió una respuesta a este taller. Si lo vuelve a enviar, la anterior será reemplazada.
   </span>
 </h4>
