--- a/src/app/admin-academica/admin-academica.component.html
+++ b/src/app/admin-academica/admin-academica.component.html
@@ -56,6 +56,63 @@
 
         </div>
     </mat-tab>
+  <mat-tab label="Imagenes slider pagina">
+        <mat-divider></mat-divider>
+
+
+
+        <div class="table-container">
+            <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+
+
+
+
+                <ng-container matColumnDef="Numero">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+                    <td mat-cell *matCellDef="let student"> {{ student.id }} </td>
+                </ng-container>
+
+                <!-- Columna Nombre -->
+                <ng-container matColumnDef="imagen">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Imagen </th>
+                    <td mat-cell *matCellDef="let student">
+                        <img *ngIf="student.foto" [src]="student.foto" alt="Foto" width="50">
+                    </td>
+
+                </ng-container>
+
+
+                <ng-container matColumnDef="Opciones">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Opciones </th>
+
+
+                    <td mat-cell *matCellDef="let student">
+
+                        <br>
+                        <input type="file" (change)="onFileSelected($event, student)" accept="image/*">
+                        &nbsp;
+                        <a mat-button class="btn btn-success btn-sm" (click)="uploadImage(student)">
+                            <i class="fa fa-save"></i>
+                        </a> &nbsp;
+                        <a mat-button class="btn btn-danger btn-sm" (click)="uploadImage(student)">
+                            <i class="fa fa-trash"></i>
+                        </a>
+                        <!-- Mostrar la imagen subida -->
+                        <img *ngIf="student.uploadedImageUrl" [src]="student.uploadedImageUrl" alt="Imagen subida"
+                            style="max-width: 200px; display: block; margin-top: 10px;">
+
+
+                    </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+
+            <mat-paginator #paginatorLogin [pageSize]="15" [pageSizeOptions]="[5, 10, 15, 20]"
+                showFirstLastButtons></mat-paginator>
+
+        </div>
+    </mat-tab>
 
     <mat-tab label="Documentos institucionales">
         <mat-divider></mat-divider>
