--- a/src/app/estudiantes/estudiantes.component.html
+++ b/src/app/estudiantes/estudiantes.component.html
@@ -23,7 +23,7 @@
                 matTooltip="Ver nota"
                 (click)="verNota(asignatura)"
                 class="ms-auto">
-          <i class="bi bi-eye-fill"></i>Ver notas
+          <i class="bi bi-eye-fill"></i>Ver listado de notas
         </button>
         &nbsp;
         <button mat-button color="primary" (click)="abrirModuloAsignatura(asignatura)">
