--- a/src/app/docentes/docentes.component.html
+++ b/src/app/docentes/docentes.component.html
@@ -77,15 +77,15 @@
             <label for="detalle_taller">Detalle</label>
             <input type="text" class="form-control" formControlName="detalle_taller" [readonly]="!modoEdicion">
           </div>
-<div class="form-group form-check mb-3">
-  <input
-    type="checkbox"
-    class="form-check-input"
-    id="taller_activo"
-    formControlName="taller_activo"
-    [disabled]="!modoEdicion">
-  <label class="form-check-label" for="taller_activo">No es un taller</label>
-</div>
+              <div class="form-group mb-3">
+            <label for="competencia">Competencia</label>
+            <input type="text" class="form-control" formControlName="competencia" [readonly]="!modoEdicion">
+          </div>
+          <div class="form-group form-check mb-3">
+            <input type="checkbox" class="form-check-input" id="taller_activo" formControlName="taller_activo"
+              [disabled]="!modoEdicion">
+            <label class="form-check-label" for="taller_activo">No es un taller</label>
+          </div>
 
           <div class="form-group mb-3">
             <label for="fecha_ini">Fecha Inicio</label>
@@ -230,7 +230,7 @@
     </div>
   </mat-tab>
   <mat-tab label="Ver listado de notas">
-<div class="container mt-4">
+    <div class="container mt-4">
 
       <h2 class="mb-4 text-center">Asignaturas del Docente</h2>
 
@@ -273,7 +273,7 @@
             <th mat-header-cell *matHeaderCellDef>Opciones</th>
             <!-- Botones -->
             <td mat-cell *matCellDef="let element">
-             
+
               <button mat-button color="accent" (click)="getInfoNotas(element.id_asignatura,element.id_grado)">
                 Ver listado de notas
               </button>
