--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -24,14 +24,14 @@
       </svg> &nbsp; Votaciones
     </a>
   
-    <a *ngIf="mostrarTab3===true" (click)="navigateTo('inventario')" class="w3-bar-item w3-button">
+    <!-- <a *ngIf="mostrarTab3===true" (click)="navigateTo('inventario')" class="w3-bar-item w3-button">
       <i class='fas fa-briefcase'></i> &nbsp; Inventario
-    </a>
+    </a> -->
     <a *ngIf="mostrarTab3===true" (click)="navigateTo('administracion')" class="w3-bar-item w3-button">
-      <i class='fas fa-cogs'></i> &nbsp; Administración
+      <i class='fas fa-cogs'></i> &nbsp; Administración academica
     </a>
      <a *ngIf="mostrarTab3===true" (click)="navigateTo('adminacademica')" class="w3-bar-item w3-button">
-      <i class='fas fa-cogs'></i> &nbsp; Administración sistema
+      <i class='fas fa-cogs'></i> &nbsp; Administración del sitio web
     </a>
        <a *ngIf="mostrarTab1===true" (click)="navigateTo('profesores')" class="w3-bar-item w3-button">
       <i class='fas fa-cogs'></i> &nbsp; Docentes asignación
@@ -40,7 +40,7 @@
       <i class='fas fa-cogs'></i> &nbsp; Estudiantes
     </a>
     <a *ngIf="mostrarTab3===true" (click)="navigateTo('usuarios')" class="w3-bar-item w3-button">
-      <i class='fas fa-users'></i> &nbsp; Usuarios
+      <i class='fas fa-users'></i> &nbsp; administración Usuarios
     </a>
   </div>
   
