--- a/src/app/vote/vote.component.html
+++ b/src/app/vote/vote.component.html
@@ -24,7 +24,7 @@
               <i type="button" class="btn btn btn-circle"><strong>{{0}}-{{candidate.numero}}</strong></i>
             </mat-card-content>
             <mat-card-actions class="center-button" *ngIf="mostrarTab2 == true">
-              <button class="btn btn-success btn-circle" mat-button (click)="vote(candidate)"> Votar</button>
+              <button class="btn btn-success btn-circle" mat-button (click)="vote(candidate)"> <h6 style="font-family: Arial, Helvetica, sans-serif; color: white;">Votar</h6></button>
             </mat-card-actions>
           </mat-card>
 
@@ -214,7 +214,7 @@
 
             <a class="btn btn-danger delete-btn" *ngIf="student.seleccionado === 'Sí'" mat-icon-button
               (click)="removeCandidate(student)">
-              <i class="fa fa-trash small-icon"> &nbsp;Eliminar candidato</i>
+              <i class="fa fa-trash small-icon"> &nbsp;<span style="font-family: Arial, Helvetica, sans-serif;">Eliminar candidato</span></i>
             </a>
 
           </td>
