--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,42 +1,42 @@
-<div class="grid1">
-  <div class="login-container">
-  <div class="carrusel">
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="500">
+<div class="login-wrapper">
+  <!-- LADO IZQUIERDO: Carrusel de imágenes -->
+  <div class="left-panel">
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100"  [src]="image1" alt="First slide">
+          <img class="d-block w-100" [src]="image1" alt="Imagen 1">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100"  [src]="image2" alt="Second slide">
+          <img class="d-block w-100" [src]="image2" alt="Imagen 2">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100"  [src]="image3" alt="Third slide">
+          <img class="d-block w-100" [src]="image3" alt="Imagen 3">
         </div>
       </div>
     </div>
   </div>
 
-  <form [formGroup]="loginForm" (ngSubmit)="authLogin()">
-    <div class="logo">
-      <img  class="icono" src="favicon.ico" alt="Logo">
-  
-    </div>
-  <h2>Iniciar Sesión</h2>
+  <!-- LADO DERECHO: Login -->
+  <div class="right-panel">
+    <form [formGroup]="loginForm" (ngSubmit)="authLogin()" class="form-container">
+      <div class="logo">
+        <img src="favicon.ico" alt="Logo" class="icono">
+      </div>
+      <h2>Iniciar Sesión</h2>
 
-    <label for="num_identificacion">Identificación</label>
-    <input id="num_identificacion" formControlName="num_identificacion" required>
-    
-    <label for="contraseña">Contraseña</label>
-    <input id="contraseña" type="password" formControlName="contraseña" required>
-    
-    <button type="submit" [disabled]="loginForm.invalid">Ingresar</button>
-    <p *ngIf="errorMessage" class="error">{{ errorMessage }}</p>
-    <br>
-    <div class="footer">
-      <p>© 2025 <br>IEM Antonio Nariño</p>  
-    </div>
-  </form>
+      <label for="num_identificacion">Identificación</label>
+      <input id="num_identificacion" formControlName="num_identificacion" required>
+
+      <label for="contraseña">Contraseña</label>
+      <input id="contraseña" type="password" formControlName="contraseña" required>
+
+      <button type="submit" [disabled]="loginForm.invalid">Ingresar</button>
+
+      <p *ngIf="errorMessage" class="error">{{ errorMessage }}</p>
+
+      <div class="footer">
+        <p>© 2025 <br>IEM Antonio Nariño</p>
+      </div>
+    </form>
+  </div>
 </div>
-</div>
-
-
