--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  
+  font-family: "Poppins", sans-serif;  
 }
   .header ul {
     list-style: none;
