--- a/src/app/vote/vote.component.css
+++ b/src/app/vote/vote.component.css
@@ -1,7 +1,7 @@
 .vote-container {
     text-align: center;
-    padding: 20px;
-    font-family: 'Roboto', sans-serif !important;
+    padding: 20px;;
+
   }
   
   .button-save {
