--- a/src/app/vote/vote.component.html
+++ b/src/app/vote/vote.component.html
@@ -47,7 +47,7 @@
       </mat-tab>
 
       <!-- TAB CONTRALORA -->
-      <mat-tab label="Contralora">
+      <mat-tab label="Contralor">
         <div *ngIf="showContralor == false">
           <h5 class="success">Ya has votado por contralor/a</h5>
         </div>
