--- a/src/app/vote/vote.component.html
+++ b/src/app/vote/vote.component.html
@@ -46,7 +46,7 @@
         </div>
       </mat-tab>
 
-      <!-- TAB CONTRALORA -->
+      <!-- TAB CONTRALOR -->
       <mat-tab label="Contralor">
         <div *ngIf="showContralor == false">
           <h5 class="success">Ya has votado por contralor/a</h5>
