--- a/src/app/vote/vote.component.html
+++ b/src/app/vote/vote.component.html
@@ -103,7 +103,7 @@
     <br>
       <label for="">Inactivar votaciones</label> 
       &nbsp;
-    <button type="button" class="btn btn-success" ><i class="fa fa-check" (click)="inactivarcadidatos()"
+    <button type="button" class="btn btn-success" ><i class="fa fa-times" (click)="inactivarcadidatos()"
             style="font-size:18px"></i></button>
     </div>
     <div *ngIf="!hascandidates" class="text-center">
