--- a/src/app/vote/vote.component.html
+++ b/src/app/vote/vote.component.html
@@ -364,9 +364,9 @@
           </p>
         </footer>
       </div>
-    </div> 
+    </div>
   </mat-tab>
-<!-- <mat-tab label="Parámetros votaciones" *ngIf="mostrarTab3 === true">
+<mat-tab label="Parámetros votaciones" *ngIf="mostrarTab3 === true">
   <div style="text-align: center;">
     <strong style="display: block; margin-bottom: 10px; font-size: 18px;">Configuración de eventos</strong>
   </div>
@@ -446,7 +446,7 @@
       </table>
     </mat-card-content>
   </mat-card>
-</mat-tab> -->
+</mat-tab>
 
 
 </mat-tab-group>
